--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,15 @@
                 android:id="@+id/shimmerFrameLayout_VP"
                 android:layout_width="match_parent"
                 android:layout_height="232dp">
-                <include layout="@layout/shimmer_home_viewpagerlayout_popularmovies"/>
+
+                <include layout="@layout/shimmer_home_viewpagerlayout_popularmovies" />
             </com.facebook.shimmer.ShimmerFrameLayout>
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/home_viewPagerID"
-                android:layout_gravity="center|top"
                 android:layout_width="match_parent"
                 android:layout_height="232dp"
+                android:layout_gravity="center|top"
                 app:layout_collapseMode="parallax" />
 
             <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
@@ -56,9 +57,10 @@
         android:fitsSystemWindows="true"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:theme="@style/Theme.MaterialComponents.DayNight">
 
             <TextView
@@ -81,6 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -90,10 +93,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-                    <include layout="@layout/shimmer_home_recyclerview_popularmovies"/>
-                    <include layout="@layout/shimmer_home_recyclerview_popularmovies"/>
-                    <include layout="@layout/shimmer_home_recyclerview_popularmovies"/>
-                    <include layout="@layout/shimmer_home_recyclerview_popularmovies"/>
+
+                    <include layout="@layout/shimmer_home_recyclerview_popularmovies" />
+
+                    <include layout="@layout/shimmer_home_recyclerview_popularmovies" />
+
+                    <include layout="@layout/shimmer_home_recyclerview_popularmovies" />
+
+                    <include layout="@layout/shimmer_home_recyclerview_popularmovies" />
 
                 </LinearLayout>
 
@@ -104,13 +111,33 @@
                 android:id="@+id/home_recyclerViewID"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:focusable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <!--<ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.19" />-->
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/progressBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="50dp">
+
+                <include layout="@layout/shimmer_home_recyclerview_popularmovies" />
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+        </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
 
