--- a/app/src/main/res/layout/shimmer_movie_profile.xml
+++ b/app/src/main/res/layout/shimmer_movie_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Movie_Profile">
+    tools:context=".UI.Movie_Profile">
 
     <View
         android:id="@+id/imageView_MovieBackDrop_ViewPager"
