--- a/app/src/main/res/layout/home_recyclerviewlayout_popularmovies.xml
+++ b/app/src/main/res/layout/home_recyclerviewlayout_popularmovies.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    app:cardCornerRadius="15dp">
+    app:cardCornerRadius="15dp"
+    app:cardBackgroundColor="@color/white"
+    android:theme="@style/Widget.MaterialComponents.CardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ll_cardView"
@@ -24,6 +26,7 @@
                 android:src="@drawable/placeholder_sample_0"
                 android:layout_margin="15dp"
                 android:elevation="10dp"
+                android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
