--- a/app/src/main/res/layout/review_movie_layout.xml
+++ b/app/src/main/res/layout/review_movie_layout.xml
@@ -40,6 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:rating="3.5"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +68,7 @@
         android:hint="Review Date"
         android:fontFamily="@font/droid_sans_bold"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,8 +80,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:hint="paragra here"
+        android:hint="paragraph here"
         android:fontFamily="@font/droid_sans"
+        android:layout_marginTop="20dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
